--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -27,7 +27,7 @@
 </div>
 
       <a href="#" id="browseTab">Browse</a>
-      <a href="#" id="bookmarksTab">MyBookmarks</a>
+      <a href="#" id="bookmarksTab">Bookmarks</a>
     </nav>
     <div class="right" data-aos="fade-left" data-aos-duration="1200">
 <div class="profile-menu">
