--- a/public/admin.html
+++ b/public/admin.html
@@ -201,10 +201,10 @@
         <button id="exportExcel" class="btn small">Download Excel</button>
       </div>
 
-      <div class="activity-prune" style="margin-top: 2rem; padding-top: 1.5rem; border-top: 1px solid #eee;">
+<div class="activity-prune" style="margin-top: 2rem; padding-top: 1.5rem; border-top: 1px solid #eee;">
         <h4>Delete Old Logs</h4>
         <p style="font-size: 0.85rem; opacity: 0.7; margin-bottom: 0.75rem;">
-          Permanently delete all activity logs created <strong>before</strong> the selected date.
+          Permanently delete all activity logs created <strong>on or before</strong> the selected date. This action cannot be undone.
         </p>
         <div class="filter-section">
           <label for="pruneDate">Delete logs before:</label>
