--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -208,6 +208,9 @@
   <button type="button" class="genre-btn" data-genre="Filipiana">Filipiana</button>
   <button type="button" class="genre-btn" data-genre="General Education">General Education</button>
   <button type="button" class="genre-btn" data-genre="Senior High">Senior High</button>
+  <button type="button" class="genre-btn" data-genre="Education">Education</button>
+  <button type="button" class="genre-btn" data-genre="Reference">Reference</button>
+  <button type="button" class="genre-btn" data-genre="Periodical">Periodical</button>
 </div>
 
           </p>
@@ -314,6 +317,9 @@
       <button class="genre-btn" data-genre="Filipiana">Filipiana</button>
       <button class="genre-btn" data-genre="General Education">General Education</button>
       <button class="genre-btn" data-genre="Senior High">Senior High</button>
+      <button class="genre-btn" data-genre="Education">Education</button>
+      <button class="genre-btn" data-genre="Reference">Reference</button>
+      <button class="genre-btn" data-genre="Periodical">Periodical</button>
   </div>
   </div>
  <h3 id="currentGenreTitle">Showing: All</h3>
