--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -288,18 +288,10 @@
     <input type="text" id="publisherSearch" placeholder="Enter publisher name">
   </div>
 
-  <div class="advanced-row">
-    <label>Year Published</label>
-    <select id="yearSearch">
-      <option value="">Select Year</option>
-      <option value="2025">2025</option>
-      <option value="2024">2024</option>
-      <option value="2023">2023</option>
-      <option value="2022">2022</option>
-      <option value="2021">2021</option>
-      <option value="2020">2020</option>
-    </select>
-  </div>
+<div class="advanced-row">
+        <label>Year Published</label>
+        <input type="text" id="yearSearch" placeholder="Enter year">
+      </div>
   <h4>Categories</h4>
   <div class="genre-filters" id="genreFilters">
       <button class="genre-btn active" data-genre="all">All</button>
