--- a/public/admin.html
+++ b/public/admin.html
@@ -109,7 +109,7 @@
         <div class="filters">
           <div class="sort-dropdown">
             <select id="categoryFilter">
-              <option value="all">All Categories</option>
+              <option value="all">All Sections</option>
             </select>
           </div>
         </div>
@@ -122,7 +122,7 @@
               <th>Cover</th>
               <th>Title</th>
               <th>Author</th>
-              <th>Category</th>
+              <th>Section</th>
               <th>Publisher</th>
               <th>Year</th>
               <th>Actions</th>
@@ -149,7 +149,7 @@
         </div>
         <div class="stat-card">
           <h3 id="reportTopCategory">-</h3>
-          <p>Top Category</p>
+          <p>Top Section</p>
         </div>
         </div>
       </div>
@@ -232,7 +232,7 @@
       <img id="modalCover" src="img/default-book.png" style="width:120px;height:170px;border-radius:12px;margin-bottom:1.5rem;">
       <p><strong>Title:</strong> <span id="modalBookTitle"></span></p>
       <p><strong>Author:</strong> <span id="modalBookAuthor"></span></p>
-      <p><strong>Category:</strong> <span id="modalBookCategory"></span></p>
+      <p><strong>Section:</strong> <span id="modalBookCategory"></span></p>
       <p><strong>Year:</strong> <span id="modalBookYear"></span></p>
       <div class="modal-buttons">
         <button id="closeBookModal" class="btn cancel">Close</button>
