--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -109,11 +109,11 @@
 
           <div class="book-read-info">
             <p class="breadcrumbs">
-              <span id="detailCategory">Category</span> &gt; <span id="detailTitleBreadcrumb">Book Name</span>
+              <span id="detailCategory">Section</span> &gt; <span id="detailTitleBreadcrumb">Book Name</span>
             </p>
             <h2 id="detailTitle">Book Title Goes Here</h2>
             <div class="book-stats">
-              <span><strong>Category:</strong> <span id="detailCategoryStat">N/A</span></span>
+              <span><strong>Section:</strong> <span id="detailCategoryStat">N/A</span></span>
               <span><strong>Pages:</strong> <span id="detailChapters">N/A</span></span>
             </div>
                         <div class="book-stats">
@@ -192,7 +192,7 @@
   <input type="number" name="year" required>
 </label></p>
           <p>
-  <label>Categories: <span style="color:red">*</span><br></label>
+  <label>Sections: <span style="color:red">*</span><br></label>
 <div id="categoriesButtons" class="genres-buttons">
   <button type="button" class="genre-btn" data-genre="Accountancy">Accountancy</button>
   <button type="button" class="genre-btn" data-genre="Criminology">Criminology</button>
@@ -207,7 +207,7 @@
   <button type="button" class="genre-btn" data-genre="Fiction">Fiction</button>
   <button type="button" class="genre-btn" data-genre="Filipiana">Filipiana</button>
   <button type="button" class="genre-btn" data-genre="General Education">General Education</button>
-  <button type="button" class="genre-btn" data-genre="Senior High">Senior High</button>
+  <button type="button" class="genre-btn" data-genre="Senior High School">Senior High School</button>
   <button type="button" class="genre-btn" data-genre="Education">Education</button>
   <button type="button" class="genre-btn" data-genre="Reference">Reference</button>
   <button type="button" class="genre-btn" data-genre="Periodical">Periodical</button>
@@ -292,7 +292,7 @@
         <label>Year Published</label>
         <input type="text" id="yearSearch" placeholder="Enter year">
       </div>
-  <h4>Categories</h4>
+  <h4>Sections</h4>
   <div class="genre-filters" id="genreFilters">
       <button class="genre-btn active" data-genre="all">All</button>
       <button class="genre-btn" data-genre="Accountancy">Accountancy</button>
@@ -308,7 +308,7 @@
       <button class="genre-btn" data-genre="Fiction">Fiction</button>
       <button class="genre-btn" data-genre="Filipiana">Filipiana</button>
       <button class="genre-btn" data-genre="General Education">General Education</button>
-      <button class="genre-btn" data-genre="Senior High">Senior High</button>
+      <button class="genre-btn" data-genre="Senior High School">Senior High School</button>
       <button class="genre-btn" data-genre="Education">Education</button>
       <button class="genre-btn" data-genre="Reference">Reference</button>
       <button class="genre-btn" data-genre="Periodical">Periodical</button>
@@ -341,7 +341,7 @@
     </div>
     <div class="stat-card">
       <h3 id="reportTopCategory">-</h3>
-      <p>Top Category</p>
+      <p>Top Section</p>
     </div>
   </div>
 
