--- a/public/intro.html
+++ b/public/intro.html
@@ -104,7 +104,7 @@
       <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
         <!-- <div class="feature-icon">🔍</div> -->
         <h3>Advanced Search</h3>
-        <p>Find exactly what you need with our advanced search features. Filter by category, author, year, and more to save time.</p>
+        <p>Find exactly what you need with our advanced search features. Filter by section, author, year, and more to save time.</p>
       </div>
       
       <div class="feature-card" data-aos="fade-up" data-aos-delay="300">
