--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -205,7 +205,7 @@
   <button type="button" class="genre-btn" data-genre="Psychology">Psychology</button>
   <button type="button" class="genre-btn" data-genre="Aviation">Aviation</button>
   <button type="button" class="genre-btn" data-genre="Fiction">Fiction</button>
-  <button type="button" class="genre-btn" data-genre="Filipiana">Filipiana</button>
+  <button type="button" class="genre-btn" data-genre="Filipiniana">Filipiniana</button>
   <button type="button" class="genre-btn" data-genre="General Education">General Education</button>
   <button type="button" class="genre-btn" data-genre="Senior High School">Senior High School</button>
   <button type="button" class="genre-btn" data-genre="Education">Education</button>
@@ -305,7 +305,7 @@
       <button class="genre-btn" data-genre="Psychology">Psychology</button>
       <button class="genre-btn" data-genre="Aviation">Aviation</button>
       <button class="genre-btn" data-genre="Fiction">Fiction</button>
-      <button class="genre-btn" data-genre="Filipiana">Filipiana</button>
+      <button class="genre-btn" data-genre="Filipiniana">Filipiniana</button>
       <button class="genre-btn" data-genre="General Education">General Education</button>
       <button class="genre-btn" data-genre="Senior High School">Senior High School</button>
       <button class="genre-btn" data-genre="Education">Education</button>
