--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -208,7 +208,7 @@
 <div id="categoriesButtons" class="genres-buttons">
   <button type="button" class="genre-btn" data-genre="Accountancy">Accountancy</button>
   <button type="button" class="genre-btn" data-genre="Criminology">Criminology</button>
-  <button type="button" class="genre-btn" data-genre="Computer Science">Computer Science</button>
+  <button type="button" class="genre-btn" data-genre="Computer Studies">Computer Studies</button>
   <button type="button" class="genre-btn" data-genre="Engineering">Engineering</button>
   <button type="button" class="genre-btn" data-genre="Commerce">Commerce</button>
   <button type="button" class="genre-btn" data-genre="Maritime">Maritime</button>
@@ -308,7 +308,7 @@
       <button class="genre-btn active" data-genre="all">All</button>
       <button class="genre-btn" data-genre="Accountancy">Accountancy</button>
       <button class="genre-btn" data-genre="Criminology">Criminology</button>
-      <button class="genre-btn" data-genre="Computer Science">Computer Science</button>
+      <button class="genre-btn" data-genre="Computer Studies">Computer Studies</button>
       <button class="genre-btn" data-genre="Engineering">Engineering</button>
       <button class="genre-btn" data-genre="Commerce">Commerce</button>
       <button class="genre-btn" data-genre="Maritime">Maritime</button>
