--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -285,8 +285,8 @@
 
   <div id="advancedSearchSection">
   <div class="advanced-row">
-    <label>Keyword (Description)</label>
-    <input type="text" id="keywordSearch" placeholder="Enter any word from description">
+    <label>Keyword</label>
+    <input type="text" id="keywordSearch" placeholder="Enter any word">
   </div>
 
   <div class="advanced-row">
