--- a/public/admin.html
+++ b/public/admin.html
@@ -17,7 +17,7 @@
     <nav>
       <a href="#" id="userTab" class="active">Users</a>
       <a href="#" id="booksTab">Books</a>
-      <a href="#" id="reportsTab">Reports</a>
+      <a href="#" id="archiveTab">Archive</a> <a href="#" id="reportsTab">Reports</a>
     </nav>
     <div class="right">
       <button id="logoutBtn" class="btn">Logout</button>
@@ -97,8 +97,8 @@
           <p>Recently Added</p>
         </div>
         <div class="stat-card">
-          <h3 id="deletedBooks">0</h3>
-          <p>Deleted (Session)</p>
+<h3 id="archivedBooks">0</h3>
+          <p>Archived Books</p>
         </div>
       </div>
 
@@ -213,18 +213,36 @@
         </div>
       </div>
     </section>
-  </main>
 
-  <div id="deleteModal" class="modal hidden">
-    <div class="modal-content">
-      <h3>Confirm Deletion</h3>
-      <p>Are you sure you want to permanently delete this user account?</p>
-      <div class="modal-buttons">
-        <button id="cancelDelete" class="btn cancel">Cancel</button>
-        <button id="confirmDelete" class="btn delete">Delete</button>
+    <section id="archiveSection" class="tab-content hidden">
+      <h2>Book Archive</h2>
+      <p style="opacity: 0.7; margin-bottom: 1.5rem;">Books here are hidden from students. You can restore them or delete them permanently.</p>
+
+      <div class="search-sort-bar">
+        <div class="search-bar">
+          <input type="text" id="archiveSearch" placeholder="Search archived books...">
+        </div>
       </div>
-    </div>
-  </div>
+
+      <div class="user-table-container">
+        <table class="user-table">
+          <thead>
+            <tr>
+              <th>Cover</th>
+              <th>Title</th>
+              <th>Author</th>
+              <th>Section</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="archiveTableBody">
+            <tr><td colspan="5" style="text-align:center;padding:2rem;">Loading archived books...</td></tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+    <section id="reportsSection" class="tab-content hidden">
+  </main>
 
   <div id="bookModal" class="modal hidden">
     <div class="modal-content">
@@ -241,13 +259,13 @@
     </div>
   </div>
 
-  <div id="bookDeleteModal" class="modal hidden">
+<div id="archiveModal" class="modal hidden">
     <div class="modal-content">
-      <h3>Confirm Book Deletion</h3>
-      <p>Are you sure you want to permanently delete this book from the library?</p>
+      <h3>Confirm Archive</h3>
+      <p>Are you sure you want to archive this book? It will be hidden from all users.</p>
       <div class="modal-buttons">
-        <button id="cancelBookDelete" class="btn cancel">Cancel</button>
-        <button id="confirmBookDelete" class="btn delete">Delete</button>
+        <button id="cancelArchive" class="btn cancel">Cancel</button>
+        <button id="confirmArchive" class="btn delete" style="background: #f39c12;">Archive</button>
       </div>
     </div>
   </div>
