--- a/public/admin.html
+++ b/public/admin.html
@@ -241,6 +241,16 @@
         </table>
       </div>
     </section>
+<div id="bookPermanentDeleteModal" class="modal hidden">
+      <div class="modal-content">
+        <h3>Confirm Permanent Deletion</h3>
+        <p>Are you sure you want to <strong>permanently delete</strong> this book? This action cannot be undone.</p>
+        <div class="modal-buttons">
+          <button id="cancelPermanentDelete" class="btn cancel">Cancel</button>
+          <button id="confirmPermanentDelete" class="btn delete">Delete</button>
+        </div>
+      </div>
+    </div>
     <section id="reportsSection" class="tab-content hidden">
   </main>
 
