--- a/public/intro.html
+++ b/public/intro.html
@@ -219,7 +219,7 @@
           <strong id="otpEmailDisplay">your.email@perpetual.edu.ph</strong>.
           Please enter it below.
         </p>
-        <input type="text" id="otpInput" placeholder="6-Digit Code" required maxlength="6" style="text-align: center; font-size: 1.2rem; letter-spacing: 0.5rem;">
+        <input type="text" id="otpInput" placeholder="6-Digit Code" required maxlength="6">
         <button class="button" type="submit" id="verifyOtpBtn">Verify Account</button>
         <p class="login-link">
           <a href="#" id="otpBackToLoginLink">Back to Log In</a>
